force-app/main/default/objects/SVMXC__Proforma_Invoice_Detail__c/SVMXC__Proforma_Invoice_Detail__c.object-meta.xml
<CustomObject>
    <description>Service contract/work order billing details</description>
    <label>Proforma Invoice Detail</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proforma Invoice Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>