force-app/main/default/objects/SVMXC__Proforma_Invoice_Detail__c/fields/SVMXC__Proforma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Proforma_Invoice__c</fullName>
    <description>Document under which this invoice is consolidated. This is a lookup to an existing Proforma Invoice record.</description>
    <inlineHelpText>Document under which this invoice is consolidated. This is a lookup to an existing Proforma Invoice record.</inlineHelpText>
    <label>Proforma Invoice</label>
    <referenceTo>SVMXC__Proforma_Invoice__c</referenceTo>
    <relationshipLabel>Proforma Invoice Details</relationshipLabel>
    <relationshipName>Proforma_Invoice_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>