force-app/main/default/objects/SVMXC__Proforma_Invoice_Detail__c/fields/SVMXC__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Total_Amount__c</fullName>
    <description>BIllable amount for this Service or Service Contract.</description>
    <inlineHelpText>BIllable amount for this Service or Service Contract.</inlineHelpText>
    <label>Total Billable Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>