force-app/main/default/objects/SVMXC__Proforma_Invoice_Detail__c/fields/SVMXC__Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Work order for which this invoice is generated. This is a lookup to an existing Work order record.</description>
    <inlineHelpText>Work order for which this invoice is generated. This is a lookup to an existing Work order record.</inlineHelpText>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Proforma Invoice Details</relationshipLabel>
    <relationshipName>Proforma_Invoice_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>